# docs/swagger.json
@@ -2224,6 +2224,55 @@
                 }
             }
         },
+        "/lojas/usuario/{id_usuario}": {
+            "get": {
+                "description": "Retorna todas as lojas de um usuário específico",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Lojas"
+                ],
+                "summary": "Lista lojas por usuário",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID do usuário",
+                        "name": "id_usuario",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Lista de lojas do usuário",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/json.LojaResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "ID inválido",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Erro interno do servidor",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/lojas/{id}": {
             "get": {
                 "description": "Retorna os dados de uma loja específica pelo ID",
@@ -6757,17 +6806,21 @@
         "json.LojaRequest": {
             "type": "object",
             "required": [
+                "categoria",
                 "cnpj",
-                "id_categoria",
+                "id_usuario",
                 "latitude",
                 "longitude",
                 "nome"
             ],
             "properties": {
+                "categoria": {
+                    "type": "string"
+                },
                 "cnpj": {
                     "type": "string"
                 },
-                "id_categoria": {
+                "id_usuario": {
                     "type": "integer"
                 },
                 "imagem": {
@@ -6805,7 +6858,7 @@
                 "id": {
                     "type": "integer"
                 },
-                "id_categoria": {
+                "id_usuario": {
                     "type": "integer"
                 },
                 "imagem": {
